--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.6"
+    "material-design-icons-iconfont": "^3.0.3",
+    "roboto-fontface": "*",
+    "vue": "^2.6.6",
+    "vue-json-tree-view": "^2.1.4",
+    "vue-router": "3.0.1",
+    "vuetify": "^1.5.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
@@ -18,6 +24,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
